# hugogui

./: README.md
lib-poki-launcher/: Cargo.toml
lib-poki-launcher/src/: config.rs  db.rs  desktop_entry.rs  hot_reload.rs  lib.rs  runner.rs  scan.rs
rusty_pipe-master/examples/: examples_search.rs
sctk/: Cargo.toml  build.rs  rustfmt.toml
sctk/examples/: app_menu.rs  bottomborder.rs  gestures.oil  gestures.sh  hugo_client_toolkit.rs  hugo_client_toolkit2.rs  hugo_widget_library.rs  keymap.rs  leftborder.rs  rightborder.rs  simple_apps.rs  simple_bar.rs  simple_keyb.rs  simple_layer.rs  simple_notif.rs  simple_scroll.rs  simple_scroll2.rs  simple_window.rs  topborder.rs  virtual_keyboard.rs  youtube.rs
sctk/examples/predictor/: mod.rs  predictionentry.rs
sctk/src/: compositor.rs  event_loop.rs  lib.rs  output.rs  registry.rs
sctk/src/seat/: mod.rs  pointer.rs  touch.rs
sctk/src/seat/keyboard/: mod.rs
sctk/src/shell/layer/: dispatch.rs  mod.rs
sctk/src/shell/xdg/: inner.rs  mod.rs
sctk/src/shell/xdg/window/: inner.rs  mod.rs
sctk/src/shm/: mod.rs
sctk/src/shm/pool/: mod.rs  raw.rs  simple.rs
