#
# This file is part of Poki Launcher.
#
# Poki Launcher is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# Poki Launcher is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with Poki Launcher.  If not, see <https://www.gnu.org/licenses/>.
#

[package]
name = "lib-poki-launcher"
version = "0.5.0"
authors = ["Ben Aaron Goldberg <ben@benaaron.dev>"]
description = "The gui framework library backing poki-launcher"
homepage = "https://github.com/zethra/poki-launcher"
repository = "https://github.com/zethra/poki-launcher"
keywords =["launcher"]
license = "GPL-3.0-or-later"
edition = "2018"

[features]
default = ["hot-reload"]
hot-reload = ["notify", "crossbeam-channel"]

[dependencies]
thiserror = "1.0"
log = "0.4"
freedesktop_entry_parser = "1.1"
rmp-serde = "0.15"
fuzzy-matcher = "0.3"
directories-next = "2.0"
lazy_static = "1.4"
nix = "0.23"
shellexpand = "2.0"
walkdir = "2.3"
file-locker = "1.0"
linicon = "2"

[dependencies.config]
version = "0.11"
default-features = false
features = ["hjson"]

[dependencies.uuid]
version = "0.8"
features = ["serde", "v4"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.notify]
version = "4.0"
optional = true

[dependencies.crossbeam-channel]
version = "0.5"
optional = true
